# myenvs

./: README.md  pyproject.toml  requirements-dev.txt
myenvs/: cli.py  environments.py  settings.py
zsh-completion/: _myenvs
